--- a/ClientApp/src/app/get-userlist/get-userlist.component.html
+++ b/ClientApp/src/app/get-userlist/get-userlist.component.html
@@ -1,1 +1,7 @@
-<h1>user list empty</h1>
+<h1>user list</h1>
+<h2 *ngIf="!UserList">Nothing yet...</h2>
+<ul *ngIf="UserList">
+    <li *ngFor="let User of UserList">
+        {{ User.Name }}
+    </li>
+</ul>
