--- a/Pages/Rpage.cshtml
+++ b/Pages/Rpage.cshtml
@@ -6,4 +6,12 @@
 
 <div>
     <h1>R Page Test</h1>
+    <ul>
+        @for (int i = 0; i < Model.ListOfUsers.Count; i++)
+        {
+            <li>@Model.ListOfUsers[i].Name</li>
+            <li>@Model.ListOfUsers[i].UserId</li>
+            <li>@Model.ListOfUsers[i].LastLogin</li>
+        }
+    </ul>
 </div>
