added relative links to userapi and razor pages.
Links added to Angular app homecomponent.

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 <h1>ASP.NET Angular, and Razor Pages</h1>
 <ul>
-  <li><a href="http://localhost:5000/userapi">http://localhost:5000/userapi</a> for JSON API</li>
-  <li> <a href="{{apiUrl}}"> {{apiUrl}}</a> this link is from baseUrl</li>
+  <li><a href="./userapi">/userapi</a> for JSON API</li>
+  <li><a href="./rpage">/rpage</a> for Asp.NET Core Razor Page</li>
+  <!-- <li> <a href="{{apiUrl}}"> {{apiUrl}}</a> this link is from baseUrl</li>
+  <li> <a href="{{baseUrl}}rpage"> {{baseUrl}}rpage</a> this link is from baseUrl Asp.Net Razor Page</li> -->
 </ul>
 <p>To help you get started, we've also set up:</p>
 <ul>
