--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,14 +1,8 @@
 <h1>ASP.NET Angular, and Razor Pages</h1>
 <ul>
-  <li><a href="./userapi">/userapi</a> for JSON API</li>
-  <li><a href="./rpage">/rpage</a> for Asp.NET Core Razor Page</li>
+  <li><a href="./userapi">/userapi</a> JSON API.</li>
+  <li><a href="./rpage">/rpage</a> for Asp.NET Core Razor Page.</li>
+  <li><a href="./get-userlist">/get-userlist</a> Angular get-userlist from API.</li>
   <!-- <li> <a href="{{apiUrl}}"> {{apiUrl}}</a> this link is from baseUrl</li>
   <li> <a href="{{baseUrl}}rpage"> {{baseUrl}}rpage</a> this link is from baseUrl Asp.Net Razor Page</li> -->
 </ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-  <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
-  <li><strong>Angular CLI integration</strong>. In development mode, there's no need to run <code>ng serve</code>. It runs in the background automatically, so your client-side resources are dynamically built on demand and the page refreshes when you modify any file.</li>
-  <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and your <code>dotnet publish</code> configuration automatically invokes <code>ng build</code> to produce minified, ahead-of-time compiled JavaScript files.</li>
-</ul>
-<p>The <code>ClientApp</code> subdirectory is a standard Angular CLI application. If you open a command prompt in that directory, you can run any <code>ng</code> command (e.g., <code>ng test</code>), or use <code>npm</code> to install extra packages into it.</p>
